welcome page image sizes changed for all accounts and aligned correctly

--- a/src/app/dashboard/welcome/welcome.component.css
+++ b/src/app/dashboard/welcome/welcome.component.css
@@ -220,4 +220,9 @@ h3 {
 .videoId-dimensions.vjs-fluid {
   padding-top: 56.25%;
 }
-
+.social-analytics{
+  width: 319px;
+  height: 218px;
+  float: right;
+  margin-top: -12px;
+}
